fixed spacing on home page

--- a/microsite/fully-realized/styles.css
+++ b/microsite/fully-realized/styles.css
@@ -24,21 +24,13 @@ h2 {
 
 .content{
   padding-top: 5%;
-  /* position: a */
 }
 
 p{
     font-family: "EB Garamond", serif;
 }
 
-.cover{
-  width: 100%;
-  height: 50vh; 
-  background-image: url('./images/savoy.png');
-  background-size: cover; 
-  background-attachment: fixed;
-  background-position: center; 
-}
+/* home */
 
 .tagline {
   color:#D5B66D;
@@ -50,23 +42,37 @@ p{
   margin:0;
   font-size:xx-large;
 }
-.savoy{
-    margin: 5% 20%;
+
+.savoy {
+    vertical-align: middle;
+    margin: auto;
+    padding-top: 5%;
+    padding-left:15%;
     width: 70%;
     position: fixed;
     text-align: center;
-    overflow: hidden;
+    overflow: none;
     justify-content: center;
 }
 
 .savoy svg {
-    width: 100%;
+    width: 90%;
     height: auto;
     position: relative;
     justify-self: center;
-    padding: 10px;
+    padding: 0;
     z-index: -1;
   }
+
+.savoy-image {
+  position: relative;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  max-width: 900px;
+  height: 100%;
+  margin: auto;
+}
 
 .home-nav{
     margin: 0 auto;
@@ -79,21 +85,44 @@ p{
     list-style: none;
     padding: 0;
     margin: 0;
-    /* display: flex; */
-    /* justify-content: space-between;  */
     font-size: medium;
-  }
-  
-
-  
-  .home-nav a {
     color: #D5B66D;
     text-decoration: none;
+    z-index: 1000;
+  }
+
+  .home-nav a#history {
+    position:fixed;
+    left:27.5%;
+  }
+
+  .home-nav a#guests {
+    position:fixed;
+    left:37.5%;
   }
   
+  .home-nav a#arts {
+    position:fixed;
+    left:54.5%;
+  }
+
+  .home-nav a#facts {
+    position:fixed;
+    left:66%;
+  }
+
+  .home-nav .spacer {
+    /* background-color: #E6DEDF; */
+    width:100%;
+    position:relative;
+    height: .001%;
+    margin:0;
+  }
+
   .home-nav a:hover {
     font-weight: bold; /* Bold font on hover */
   }
+
 
 
   /* navigation */
@@ -101,7 +130,6 @@ p{
     width: 100%;
   }
 
-  
   .nav-bar {
     display: flex;
     align-items: center;
@@ -170,7 +198,6 @@ p{
       transition: 0.4s;
     }
   
-    /* Adjust nav-bar to align items vertically */
     .nav-bar {
       flex-direction: row;
       justify-content: space-between;
@@ -182,7 +209,7 @@ p{
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: space-between; /* Space between elements */
+    justify-content: space-between;
   }
   
   .navigation ul li {
@@ -195,7 +222,7 @@ p{
   }
   
   .navigation ul li a:hover {
-    font-weight: bold; /* Bold font on hover */
+    font-weight: bold;
   }
 
   .navigation .selected{
@@ -220,6 +247,15 @@ h1{
 }
 
 /* history page */
+.cover{
+  width: 100%;
+  height: 50vh; 
+  background-image: url('./images/savoy.png');
+  background-size: cover; 
+  background-attachment: fixed;
+  background-position: center; 
+}
+
 .savoy-img {
   width: 50%;
 }
@@ -439,6 +475,15 @@ button.title:hover {
   position:absolute;
   width:50%;
   right:5%;
+}
+
+h2.quote{
+  margin-bottom: 0;
+}
+
+h2.credit{
+  font-weight: 100;
+  margin-top:0;
 }
 
 .arts-cover {
